# zk-snark

./: Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: eddsa_verification.rs  merkle_tree_inclusion.rs  sudoku_solution.rs
src/: lib.rs  merkle.rs  pcs.rs  piop.rs  r1cs.rs  snark.rs  sumcheck.rs  transcript.rs
tests/: snark.rs
